# imperial

./: .LEGO-Motor_Position.py.swp  .gitignore  .gitmodules  1.0_power_control.py  1.6.3_position_control.py  2.2.1_random_bounce.py  2.2.2_proportional_servoing.py  2.2.3_wall_following.py  3.2.3_sonar_reporter.py  Bot.py  LEGO-Motor_DPS.py  LEGO-Motor_Position.py  LEGO-Motor_Power.py  README.md  Simplebot.py  common.py  crossValidate.py  decisionTree.py  experiment.py  get_timetable.sh  index.js  loading.py  mcl2.py  mcl3.py  nodes.py  part1_nn_lib.py  part2_house_value_regression.py  part2_model.pickle  particleDataStructures.py  particles.py  position_control.py  power_control.py  power_control_interactive.py  random_bounce.py  sonar_reporter.py  star.py  task1.py  test.py  tool.py  visualise.py  (+1 more)
scheduling_resource_allocation/: .gitignore  README.md  main.py  printout.txt  pyproject.toml
scheduling_resource_allocation/algorithms/: lcl.py
scheduling_resource_allocation/answers/: answers.tex
scheduling_resource_allocation/artefacts/: cw_lcl_tex.text  cw_tabu_tex_K=10.text  cw_tabu_tex_K=100.text  cw_tabu_tex_K=1000.text  cw_tabu_tex_optimal.text  cw_tabu_tex_random.text  directed_acyclic_graph.json  example_dag.json  example_lcl_tex.text
scheduling_resource_allocation/common/: common.py  constants.py  models.py
scheduling_resource_allocation/core/: LCLWithTexCallback.py  LowestCostLassScheduler.py  Schedule.py  TabuSearchScheduler.py  TabuWithTexCallback.py
scheduling_resource_allocation/data/: 1.1.example_incidence_matrix.txt  1.1.example_node_data.txt  (+4 more)
(+284 files in other folders)
